	PR middle-end/18921 	* fold-const.c (fold_unwidened_comparison): Use omit_one_operand 	instead of constant_boolean_node as arg0 may have side-effects.

* gcc.dg/pr18921-1.c: New test case.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@92030 138bc75d-0d04-0410-961f-82ee72b054a4